--- a/css/royce.css
+++ b/css/royce.css
@@ -47,23 +47,24 @@ table {
 	border-spacing: 0;
 }
 /* End Eric Meyer code */
-
+* {
+    box-sizing: border-box;
+}
 body {
 	position: relative;
 	font: 14px/1.4 geneva, sans-serif; color: #0f2046;
-	background-color: rgba(79, 140, 239, .5);
-	background-image: url("../images/bosporous-optimized.jpg");
+	background: rgba(79, 140, 239, .5) url("../images/bosporous-optimized.jpg") 0 -60px no-repeat;
 	background-size: contain;
-	background-repeat: no-repeat;
-	background-position-y: -60px;
 	margin-left: 30px;
-	max-width: 1200px;
+	width: 100%;
 }
 nav, footer{
 	background-color: rgba(255, 255, 255, .65);
 	margin-left: -30px;
 	padding: 20px;
+	width: 100%;
 }
+
 nav li{
 	display: inline-block;
 	margin: 30px;
@@ -73,6 +74,10 @@ nav a {
 	text-decoration: none;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
+
+a:hover {
+	hover: gray;
+}
 a:visited {
 	color: #362819;
 }
@@ -81,17 +86,28 @@ a:visited {
 	margin: 30px;
 	width: 35%;
 }
+.tile-container{
+	display: flex;
+	flex-wrap: wrap;
+}
 .tile {
-	width: 35%;
-	margin-bottom: 20px;
-	width: 35%;
+	width: 300px;
+	margin: 10px;
+
 }
 figcaption {
 	font-style: italic;
 }
+footer{
+	height: 10em;
+}
+
+footer a:visited {
+	color: blue;
+}
 h1{
-	font: 36px 'Lato';
-	margin-bottom: 30px;
+	font: 500 42px 'Roboto', sans-serif;
+	/* margin-bottom: 30px; */
 	text-align: center;
 }
 h1 span{
@@ -99,30 +115,31 @@ h1 span{
 	font-style: italic;
 	line-height: 5px;
 }
-section {
-	background-color: rgba(255, 255, 255, .5);
-	margin: 40px 30px;
-	padding: 10px 30px;
-}
 h2 {
-	font: 30px 'Lato';
+	font: 30px 'Roboto', sans-serif;
 	text-align: center;
 	padding: 20px;
 }
 h3{
-	font: 16px 'Lato';
+	font: 16px 'Roboto', sans-serif;
 	margin: 1em 0 0;
 }
 h4{
-	font: 12px 'Lato';
+	font: 12px 'Roboto', sans-serif;
 	margin: 1em 10px 0;
 }
-main{
-	margin: 30px 20px 60px 10px;
-	border: 2px solid #0f2046;
-	background-color: rgba(255, 255, 255, .5);
-	padding: 30px;
-	width: 65%;
+i {
+	color: blue;
+	font-size: 24px;
+	margin-right: 10px;
+}
+i:hover {
+	color: gray;
+}
+img{
+	max-width: 100%;
+	height: auto;
+	margin-top: 20px;
 }
 li {
 	font-size: 12px;
@@ -134,17 +151,22 @@ li span{
 	display: block;
 	margin: 2px 0 0 10px;
 }
+main{
+	margin: 30px 20px 60px 10px;
+	border: 2px solid #0f2046;
+	background-color: rgba(255, 255, 255, .5);
+	padding: 30px;
+	width: 65%;
+}
+section {
+	background-color: rgba(255, 255, 255, .5);
+	margin: 40px 30px;
+	padding: 10px 30px;
+}
 ul{
 	margin-top: 5px;
 }
 li > ul{
 	margin: 2px 30px 5px;
 	list-style-type: disc;
-}
-img{
-	width: 100%;
-	margin-top: 20px;
-}
-footer{
-	height: 10em;
 }
