--- a/css/royce.css
+++ b/css/royce.css
@@ -141,7 +141,7 @@ main{
 	width: 65%;
 }
 nav, footer{
-	background-color: rgba(255, 255, 255, .65);
+	background-color: rgb(255, 255, 255);
 	margin-left: -30px;
 	padding: 20px;
 	width: 100%;
