--- a/css/royce.css
+++ b/css/royce.css
@@ -13,6 +13,8 @@
 		position: absolute;
 		top: 0;
 		left: -1000px;
+		background-color: white;
+		color: darkblue;
 	}
 	.landmark {
 		border-radius: 10px;
@@ -172,6 +174,7 @@
 		grid-row-start: 6;
 	}
 	ul{
+		list-style-type: none;
 		margin-top: 5px;
 	}
 	li > ul{
@@ -180,11 +183,9 @@
 	}
 } /* end @ all media */
 
-/* iPad portrait view: Background and landmark images disappear and aside narrows*/
+/* iPad portrait view: Landmark image disappears and aside narrows*/
 	@media screen and (max-width: 1068px) {
-		body {
-			background: rgba(79, 140, 239, .5);
-		}
+
 		.landmark {
 			display: none;
 		}
@@ -198,10 +199,13 @@
 			margin-top: 500px;
 		}
 	}
-/* phone view: navigation converts to blocks across screen and no images*/
+/* phone view: navigation converts to blocks across top of screen and no background image*/
 @media screen and (max-width: 769px){
 	aside {
 		display: none;
+	}
+	body {
+		background: rgba(79, 140, 239, .5);
 	}
 	h1 {
 		font-size: 2em;
