--- a/css/royce.css
+++ b/css/royce.css
@@ -7,6 +7,100 @@
 		font: 14px/1.4 geneva, sans-serif; color: #0b1938;
 		background-color: rgba(79, 140, 239, .5);
 	}
+/*Pure Javascript Accordion codePEN by sureshrkm https://codepen.io/sureshrkm/pen/ZbzBpr */
+
+.accordionWrapper{
+	padding:30px;
+	background:#fff;
+	width:100%;
+	border-radius: 10px;
+	box-shadow: 0 1.5em 85px 0 rgba(0, 0, 0, 0.2);
+}
+
+.accordionItemHeading{
+    cursor:pointer;
+	padding:1em;
+    background: #13547f;
+    color:#fff;
+	width:100%;
+    -webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	box-sizing: border-box;
+	width: 100%;
+}
+.close .accordionItemContent{
+    height:0px;
+    transition:height 1s ease-out;
+    -webkit-transform: scaleY(0);
+	-o-transform: scaleY(0);
+	-ms-transform: scaleY(0);
+	transform: scaleY(0);    
+}
+.open .accordionItemContent{
+    padding: 25px 40px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    -webkit-transform: scaleY(1);
+	-o-transform: scaleY(1);
+	-ms-transform: scaleY(1);
+	transform: scaleY(1);
+    -webkit-transform-origin: top;
+	-o-transform-origin: top;
+	-ms-transform-origin: top;
+	transform-origin: top;
+
+	-webkit-transition: -webkit-transform 0.4s ease-out;
+	-o-transition: -o-transform 0.4s ease;
+	-ms-transition: -ms-transform 0.4s ease;
+	transition: transform 0.4s ease;
+}
+.open .accordionItemHeading{
+    margin:0px;
+        -webkit-border-top-left-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    -moz-border-radius-topright: 3px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 0px;
+    -webkit-border-bottom-left-radius: 0px;
+    -moz-border-radius-bottomright: 0px;
+    -moz-border-radius-bottomleft: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+/* end PEN by sureshrkm */
+
+/*accordion styling sourced from https://www.w3schools.com/howto/howto_js_accordion.asp and modified to fit PEN by sureshrkm*/
+
+	  .accordionItemHeading h3:hover {
+		background-color: #ccc;
+	  }
+	  .close h3:after {
+		content: '\002B';
+		font-weight: bold;
+		font-size: 1.5em;
+		float: right;
+		padding-right: 30px;
+		z-index: 4;
+	  }
+
+	  .open h3:after {
+		content: "\2212";
+		float: right;
+		font-size: 2em;
+		padding-right: 30px;
+	  }
+	  
+	  .panel {
+		padding: 20px;
+		background-color: white;
+		display: none;
+		overflow: hidden;
+	  }
+	  /*end w3schools styling */
+
 	.gallery{
 		width: 98%;
 		margin:0 auto;
@@ -41,11 +135,15 @@
 		border-radius: 3px;
 		text-align: center;
 	}
-	.landmark, .sticky {
+	.landmark, .myBtn {
 		display: none;
 	}
+	.resume-item{
+		margin-bottom: 20px;
+	}
 	.onpage {
-		background-color: #FFD872;
+		background-color: #13547f;
+		color: white;
 		padding: 20px;
 		height: auto;
 	}
@@ -81,26 +179,26 @@
 		list-style: none;
 	}
 	h1 {
-		font: 500 2em 'Roboto', sans-serif;
+		font: 500 3em 'Roboto', sans-serif;
 	}
 	h1 span{
-		font-size: 12px;
+		font-size: .5em;
 		font-style: italic;
 		display: block;
 		margin: 20px 0 30px;
 	}
 	h2 {
-		font-size: 1.5em;
+		font-size: 2em;
 		text-align: left;
 		margin: 0;
 		padding-left: 0;
 	}
 	h3{
-		font: 16px 'Roboto', sans-serif;
-		margin: 1em 0 0;
+		font: 1.5em 'Roboto', sans-serif; 
+		padding: 2em 20px;
 	}
 	h4{
-		font: 12px 'Roboto', sans-serif;
+		font: 1em 'Roboto', sans-serif;
 		margin: 1em 10px 0;
 	}
 	header {
@@ -119,11 +217,12 @@
 		height: auto;
 		margin-top: 10px;
 	}
+
 	li span{
 		font-style: italic;
-		font-size: 10px;
+		font-size: 1em;
 		display: block;
-		margin: 2px 0 0 10px;
+		margin: 2px 0 0;
 	}
 	main {
 		background-color: rgba(255, 255, 255, .5);
@@ -169,18 +268,35 @@
 }/* end phone view*/
 
 /* iPad portrait view: Switch navigation layout; display main content as grid; add 'to top' link*/
-@media screen and (min-width: 500px) {
-	.sticky {
-		position: -webkit-sticky; /* Safari  */
-		position: sticky;
-		display: block;
-		width: 5em;
-		text-align: center;
-		line-height: 3em;
-		top: 400px;
-		background-color: whitesmoke;
-		border: 2px solid blue;
-		margin: 250px auto 0;
+@media screen and (min-width: 640px) {
+
+/* following section of code is from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp         */
+	#myBtn {
+		display: none; /* Hidden by default */
+		position: fixed; /* Fixed/sticky position */
+		bottom: 20px; /* Place the button at the bottom of the page */
+		right: 30px; /* Place the button 30px from the right */
+		z-index: 99; /* Make sure it does not overlap */
+		border: none; /* Remove borders */
+		outline: none; /* Remove outline */
+		background-color: #13547f; /* Set a background color */
+		color: white; /* Text color */
+		cursor: pointer; /* Add a mouse pointer on hover */
+		padding: 15px; /* Some padding */
+		border-radius: 10px; /* Rounded corners */
+		font-size: 18px; /* Increase font size */
+	  }
+	  #myBtn a {
+		  color: white;
+	  }
+	  
+	  #myBtn:hover {
+		background-color: #555; /* Add a dark-grey background on hover */
+	  }
+/* end https://www.w3schools.com/howto/howto_js_scroll_to_top.asp  */
+	.onpage {
+		border-radius: 10px;
+		border: 2px dotted orange;
 	}
 	aside{
 		display: block;
@@ -235,9 +351,9 @@
 	}
 }/* end iPad */
 
-/*For screens greater than 1400px in width. Aside column widens to display landmark photo. Background image appears.*/
+/*For screens greater than 1300px in width. Aside column widens to display landmark photo. Background image appears.*/
 
-@media screen and (min-width: 1450px){
+@media screen and (min-width: 1300px){
 	.landmark {
 		display: block;
 		border-radius: 10px;
@@ -257,6 +373,7 @@
 	}
 	main{
 		grid-template-columns: 30px 2fr 300px 30px;
+		max-width: 1400px;
 	}
 	p {
 		max-width: 80em;
@@ -282,5 +399,9 @@
 	}
 	h2 {
 		margin: 20px 0 10px;
+		font-size: 1.5em;
+	}
+	h3 {
+		margin-top: 30px;
 	}
 /* end media print */}
